@@ -145,6 +145,7 @@ static void t_split(void)
 static void t_quote(void)
 {
 	char *fm = NULL;
+	printf("%p %p\n", "a", HX_strquote("a", 0xffff, &fm));
 	printf("%s\n", HX_strquote("\"Good\" ol' \\'escaped\\' strings", HXQUOTE_SQUOTE, &fm));
 	printf("%s\n", HX_strquote("\"Good\" ol' \\'escaped\\' strings", HXQUOTE_DQUOTE, &fm));
 	printf("%s\n", HX_strquote("<p style=\"height: 1;\">Foo &amp; \"bar\"</p>", HXQUOTE_HTML, &fm));
